actual first commit

--- a/index.html
+++ b/index.html
@@ -1,7 +1,23 @@
-<h1>Jason Bautista per4 </h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" type="text/css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+</head>
+<body>
+   <h1>Jason Bautista per4 </h1>
 <h2>My favorite part of advanced web</h2>
     <p>My favoite pat of Patino would be the amount that we get to use technology at this school.
     My favorite part of this class is the free
     reign we had in what we wanted to crreate. 
     Overall one of the best things in this school is the freedom</p>
-    
+    <h2>My least favorite part of </h2>
+    <p>One of my least favorite things of patino is the strictness of certain areas. 
+    Patino is overall pretty linient but they ae strict in a couple of areas like getting
+    work done and such. In this class it would be that there isn't much collaboration but it makes sense
+    since coding is mainly individual.</p> 
+</body>
+</html>
