testing branch commit

--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" type="text/css" />
+    <link rel="stylesheet" href="main.css" type="text/css" >
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" >
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    
+    <title>Advanced web quiz</title>
 </head>
-<body>
-   <h1>Jason Bautista per4 </h1>
+<body class="containter">
+   <div class="jumbotron">
+       <h1>Jason Bautista per4 </h1>
+   </div>
 <h2>My favorite part of advanced web</h2>
     <p>My favoite pat of Patino would be the amount that we get to use technology at this school.
     My favorite part of this class is the free
