--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
     
     <title>Advanced web quiz</title>
 </head>
-<body class="containter">
+<body>
+    <div class="container">
    <div class="jumbotron">
        <h1>Jason Bautista per4 </h1>
    </div>
+
 <h2>My favorite part of advanced web</h2>
     <p>My favoite pat of Patino would be the amount that we get to use technology at this school.
     My favorite part of this class is the free
@@ -23,5 +25,6 @@
     Patino is overall pretty linient but they ae strict in a couple of areas like getting
     work done and such. In this class it would be that there isn't much collaboration but it makes sense
     since coding is mainly individual.</p> 
+  </div>
 </body>
 </html>
